ansible-kub/roles/node/defaults/service.yml
kind: Service
apiVersion: v1
metadata:
  name: wordpress
spec:
  selector:
    app:  nginx
  # type:  LoadBalancer
  ports:
  - protocol: TCP
    port:  80
    targetPort:  80

#  | ClusterIP | NodePort
