ansible-kub/roles/node/defaults/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: all
      http:
        paths:
          - path: /my-service
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
